Fix loading of dashboards, and overflow

--- a/app/styles/tools.styl
+++ b/app/styles/tools.styl
@@ -1,6 +1,6 @@
 .ubret-tool
-  height: 90%
-  width: 95%
+  height: 99%
+  width: 99%
   z-index: 0
   overflow: auto
 
